Field Hunt/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Areas_of_Expertise__c</fullName>
        <description>This is the self-selected list of areas where a contact believes they have expertise. This links to the &quot;Skills I Have&quot; field on the website.</description>
        <inlineHelpText>This is the self-selected list of areas where a contact believes they have expertise. This links to the &quot;Skills I Have&quot; field on the website.</inlineHelpText>
        <label>Areas of Expertise</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advocacy &amp; Public Policy</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Community Foundation Ops</fullName>
                </value>
                <value>
                    <fullName>Corporate Giving Ops</fullName>
                </value>
                <value>
                    <fullName>Diversity Inclusion and Equity</fullName>
                </value>
                <value>
                    <fullName>Emerging Giving Practices</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Executive Management</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Funder Collaboration</fullName>
                </value>
                <value>
                    <fullName>Governance</fullName>
                </value>
                <value>
                    <fullName>Grant Management Systems</fullName>
                </value>
                <value>
                    <fullName>Grant Review</fullName>
                </value>
                <value>
                    <fullName>International Grantmaking</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Legal &amp; Tax Compliance</fullName>
                </value>
                <value>
                    <fullName>Managing Investments</fullName>
                </value>
                <value>
                    <fullName>Mission Investing</fullName>
                </value>
                <value>
                    <fullName>Private/Family Fnd Ops</fullName>
                </value>
                <value>
                    <fullName>Private/Independent Fnd Ops</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_ID_18__c</fullName>
        <description>This is the long Contact ID, as opposed to the partial, 15-digit ID shown in URLs.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the long Contact ID, as opposed to the partial, 15-digit ID shown in URLs.</inlineHelpText>
        <label>Contact ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convening_Exhibitor_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mailing List</description>
        <inlineHelpText>Check to add Contact to Mailing List</inlineHelpText>
        <label>Convening Exhibitor Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <description>This is a field for members to enter if they have a disability, and comes from their page on the website.</description>
        <inlineHelpText>This is a field for members to enter if they have a disability, and comes from their page on the website.</inlineHelpText>
        <label>Disability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity_Other__c</fullName>
        <description>This is a field for members to enter ethnicity information if they select &quot;Other&quot; from the regular picklist.</description>
        <inlineHelpText>This is a field for members to enter ethnicity information if they select &quot;Other&quot; from the regular picklist.</inlineHelpText>
        <label>Ethnicity Other</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Congressional_District__c</fullName>
        <description>This is the Federal Congressional District for the contact.</description>
        <inlineHelpText>Enter the Federal Congressional District for the contact.</inlineHelpText>
        <label>Federal Congressional District</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_Update__c</fullName>
        <description>This field is used with Jitterbit, Data Loader, or other tools to force an update of the contact.</description>
        <inlineHelpText>This field is used with Jitterbit, Data Loader, or other tools to force an update of the contact.</inlineHelpText>
        <label>Force Update</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_Other__c</fullName>
        <description>This is a field for members to enter self-described gender, if they select &quot;Other&quot; from the picklist.</description>
        <inlineHelpText>This is a field for members to enter self-described gender, if they select &quot;Other&quot; from the picklist.</inlineHelpText>
        <label>Gender Other</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giving_Forum__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mailing List</description>
        <inlineHelpText>Check to add Contact to Mailing List</inlineHelpText>
        <label>Giving Forum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Giving_Memo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mailing List</description>
        <inlineHelpText>eNewsletter for grantseekers. Check to add Contact to Mailing List</inlineHelpText>
        <label>Giving Memo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Giving_Memo_and_MCF_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mailing List</description>
        <inlineHelpText>Check to add Contact to Mailing List</inlineHelpText>
        <label>Giving Memo and MCF Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IMPak_Id__c</fullName>
        <description>This is the ID from our old database.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the ID from our old database and should not be edited.</inlineHelpText>
        <label>IMPak Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impak_Congressional_District__c</fullName>
        <description>This is the congressional district as shown at the time of the conversion from Impak.</description>
        <inlineHelpText>This is the congressional district as shown at the time of the conversion from Impak.</inlineHelpText>
        <label>Impak Congressional District</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impak_Last_Change_By__c</fullName>
        <description>This is an imported code showing the last user or process that edited a record in Impak before migration. (LMS = Lori Miller-Shiell, CNV = Conversion, WEB = Website, etc.)</description>
        <inlineHelpText>This is an imported code showing the last user or process that edited a record in Impak before migration. (LMS = Lori Miller-Shiell, CNV = Conversion, WEB = Website, etc.)</inlineHelpText>
        <label>Impak Last Change By</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impak_Last_Change_Date__c</fullName>
        <description>This date shows the last time a record was edited in Impak before migration.</description>
        <inlineHelpText>This date shows the last time a record was edited in Impak before migration.</inlineHelpText>
        <label>Impak Last Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impak_State_House_District__c</fullName>
        <description>This is the state house district as shown at the time of the conversion from Impak.</description>
        <inlineHelpText>This is the state house district as shown at the time of the conversion from Impak.</inlineHelpText>
        <label>Impak State House District</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impak_State_Senate_District__c</fullName>
        <description>This is the state senate district as shown at the time of the conversion from Impak.</description>
        <inlineHelpText>This is the state senate district as shown at the time of the conversion from Impak.</inlineHelpText>
        <label>Impak State Senate District</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LGBT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Corresponds to the &quot;Do you consider yourself LGBT?&quot; question on the contact page of the website.</description>
        <inlineHelpText>Corresponds to the &quot;Do you consider yourself LGBT?&quot; question on the contact page of the website.</inlineHelpText>
        <label>LGBT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCF_Messenger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mailing List</description>
        <inlineHelpText>Member-only print newsletter. Check to add Contact to Mailing List</inlineHelpText>
        <label>MCF Messenger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCF_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mailing List</description>
        <inlineHelpText>Member-onlyeNewsletter. Check to add Contact to Mailing List</inlineHelpText>
        <label>MCF Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MGO_Banner_Image__c</fullName>
        <formula>IMAGE(&quot;https://c.na16.content.force.com/servlet/servlet.ImageServer?id=015j0000000MGoC&amp;oid=00Dj0000001rKUZ&amp;lastMod=1458939550000&quot;, &quot;MGO Banner&quot;,85,596)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MGO Banner Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MGO_Last_Membership_Amount__c</fullName>
        <description>The amount of the last MGO payment.</description>
        <inlineHelpText>Enter the amount of the last MGO payment.</inlineHelpText>
        <label>MGO Last Membership Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MGO_Last_Membership_Date__c</fullName>
        <description>The date of the last MGO order.</description>
        <inlineHelpText>Enter the date of the last MGO order.</inlineHelpText>
        <label>MGO Last Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MGO_Last_Membership_Level__c</fullName>
        <description>The level of the last MGO membership.</description>
        <inlineHelpText>Enter the level of the last MGO membership.</inlineHelpText>
        <label>MGO Last Membership Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MGO_Membership_End_Date__c</fullName>
        <description>The date the MGO membership ends.</description>
        <inlineHelpText>Enter the date the MGO membership ends.</inlineHelpText>
        <label>MGO Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MGO_Membership_Join_Date__c</fullName>
        <description>The date of their first MGO membership. (For many subscribers, the earliest information we have comes from Impak, which was 2014. They may have been members previously.)</description>
        <inlineHelpText>Enter the date of their first MGO membership.</inlineHelpText>
        <label>MGO Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MGO_Membership_Status__c</fullName>
        <description>This shows the current MGO membership status for an individual.</description>
        <inlineHelpText>Select the current MGO membership status for an individual.</inlineHelpText>
        <label>MGO Membership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MGO-Active</fullName>
                </value>
                <value>
                    <fullName>MGO-Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MGO_Number_of_Users__c</fullName>
        <label>MGO Number of Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows whether a particular contact has asked us not to mail them.</description>
        <inlineHelpText>Select if a contact has asked us not to mail them.</inlineHelpText>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name Drupal</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minnesota_House_District__c</fullName>
        <description>This is the Minnesota House District for the contact.</description>
        <inlineHelpText>Enter the Minnesota House District for the contact.</inlineHelpText>
        <label>Minnesota House District</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minnesota_Senate_District__c</fullName>
        <description>This is the Minnesota Senate District for the contact.</description>
        <inlineHelpText>Enter the Minnesota Senate District for the contact.</inlineHelpText>
        <label>Minnesota Senate District</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_Affiliations__c</fullName>
        <description>Count of the number of active affiliations for a contact.</description>
        <inlineHelpText>Count of the number of active affiliations for a contact.</inlineHelpText>
        <label>Number of Active Affiliations</label>
        <summaryForeignKey>npe5__Affiliation__c.npe5__Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Organization_Name_Update__c</fullName>
        <description>User-entered org name from the website. Use it to update them to the correct account, or to change an account name when the name of an organization changes.</description>
        <inlineHelpText>User-entered or name from the website. Use it to update them to the correct account, or to change an account name when the name of an organization changes. Clear when all updates are done.</inlineHelpText>
        <label>Organization Name Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_For_Reports__c</fullName>
        <description>This shows True if the person is the primary contact for their main Account. To change this field, edit the Contact&apos;s Affiliation.</description>
        <formula>Account.gf_sf__Primary_Contact__c  = Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This shows True if the person is the primary contact for their main Account. To change this field, edit the Contact&apos;s Affiliation.</inlineHelpText>
        <label>Primary Contact For Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RMPF_Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shows the current coach for Ron McKinley Philanthropy Fellows.</description>
        <inlineHelpText>Select the current coach for Ron McKinley Philanthropy Fellows.</inlineHelpText>
        <label>RMPF Coach</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (RMPF Coach)</relationshipLabel>
        <relationshipName>RMPF_Coach</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMPF_Status__c</fullName>
        <description>For Ron McKinley Fellows, shows whether they are current or former fellows. In order to update this field, go to the Ron McKinley Philanthropy Fellows Affiliation and change the Status.</description>
        <inlineHelpText>For Ron McKinley Fellows, shows whether they are current or former fellows. In order to update this field, go to the Ron McKinley Philanthropy Fellows Affiliation and change the Status.</inlineHelpText>
        <label>RMPF Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMPF_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shows the supervisor at the host foundation for Ron McKinley Philanthropy Fellows.</description>
        <inlineHelpText>Select the supervisor at the host foundation for Ron McKinley Philanthropy Fellows.</inlineHelpText>
        <label>RMPF Supervisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skills_and_Knowledge__c</fullName>
        <label>Skills and Knowledge</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advocacy &amp; Public Policy</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Community Foundation Ops</fullName>
                </value>
                <value>
                    <fullName>Corporate Giving Ops</fullName>
                </value>
                <value>
                    <fullName>Diversity Inclusion and Equity</fullName>
                </value>
                <value>
                    <fullName>Emerging Giving Practices</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Executive Management</fullName>
                </value>
                <value>
                    <fullName>Funder Collaboration</fullName>
                </value>
                <value>
                    <fullName>Governance</fullName>
                </value>
                <value>
                    <fullName>Grant Management Systems</fullName>
                </value>
                <value>
                    <fullName>Grant Review</fullName>
                </value>
                <value>
                    <fullName>International Grantmaking</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Legal &amp; Tax Compliance</fullName>
                </value>
                <value>
                    <fullName>Managing Investments</fullName>
                </value>
                <value>
                    <fullName>Mission Investing</fullName>
                </value>
                <value>
                    <fullName>Private/Family Fnd Ops</fullName>
                </value>
                <value>
                    <fullName>Private/Independent Fnd Ops</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort_Name__c</fullName>
        <description>This is a single field combining Last, First and Middle names for sorting in Salesforce reports.</description>
        <formula>LastName &amp; &quot; &quot; &amp; FirstName &amp; &quot; &quot; &amp; MiddleName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a single field combining Last, First and Middle names for sorting in Salesforce reports.</inlineHelpText>
        <label>Sort Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Account_Last_Membership_Level__c</fullName>
        <label>Account Last Membership Level</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Account_Membership_Status__c</fullName>
        <label>Account Membership Status</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Areas_of_Interest__c</fullName>
        <description>The Areas of Interest field is synched with Drupal to allow users to opt-in and opt-out of mailings around focus areas.</description>
        <inlineHelpText>This field is synched with Drupal to allow users to opt-in and opt-out of mailings around focus areas. CAUTION: If you add new values to Drupal first and they will auto-populate in Salesforce. Please keep this in mind when editing this field.</inlineHelpText>
        <label>Areas of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>tbd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Blog__c</fullName>
        <label>Blog</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>gf_sf__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VALUES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Date_of_First_Membership__c</fullName>
        <inlineHelpText>Enter the date this member first joined the association.</inlineHelpText>
        <label>Date of First Membership</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gf_sf__Drupal_ID__c</fullName>
        <label>Drupal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Drupal_Type__c</fullName>
        <label>Drupal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Caucasian</fullName>
                </value>
                <value>
                    <fullName>African American</fullName>
                </value>
                <value>
                    <fullName>Latino</fullName>
                </value>
                <value>
                    <fullName>Asian/Pacific Islanders</fullName>
                </value>
                <value>
                    <fullName>American Indian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Facebook__c</fullName>
        <inlineHelpText>Caution - this field integrates with Drupal</inlineHelpText>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>gf_sf__Flickr__c</fullName>
        <label>Flickr</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>gf_sf__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Transgender</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Google_plus__c</fullName>
        <label>Google+</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>gf_sf__Inc_In_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inc. In Directory?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gf_sf__Inc_Individual_In_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inc. Individual In Directory?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gf_sf__IncludeInMemDirectory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Member Directory?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gf_sf__Individual_Membership_Status__c</fullName>
        <label>Individual Membership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
                <value>
                    <fullName>Not Eligible for Membership</fullName>
                </value>
                <value>
                    <fullName>MGO - Active</fullName>
                </value>
                <value>
                    <fullName>MGO - Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Individual_Type__c</fullName>
        <label>Individual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VALUES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Instagram__c</fullName>
        <label>Instagram</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>gf_sf__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Last_Membership_Level_Formula__c</fullName>
        <formula>if( text( gf_sf__Individual_Membership_Status__c )= &quot;Current&quot;, npo02__LastMembershipLevel__c , if( gf_sf__Account_Membership_Status__c=&quot;Current&quot;, gf_sf__Account_Last_Membership_Level__c , null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CAUTION This field syncs with Drupal. Please keep this in mind when editing this field.</inlineHelpText>
        <label>Last Membership Level (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__LinkedIn__c</fullName>
        <inlineHelpText>Caution - this field integrates with Drupal</inlineHelpText>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>gf_sf__Mail_Preference__c</fullName>
        <inlineHelpText>Enter in the contact&apos;s preference for how they want to be communicated with. CAUTION This field syncs with Drupal. If you add new values to Drupal first and they will auto-populate in Salesforce. Please keep this in mind when editing this field.</inlineHelpText>
        <label>Mail Preference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Mailing_List__c</fullName>
        <label>Mailing List (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Membership_Status_Formula__c</fullName>
        <formula>If ( text(gf_sf__Individual_Membership_Status__c)  &lt;&gt;  &quot;&quot;,  text(gf_sf__Individual_Membership_Status__c) ,  gf_sf__Account_Membership_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CAUTION This field syncs with Drupal. Please keep this in mind when editing this field.</inlineHelpText>
        <label>Membership Status (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Name_Suffix__c</fullName>
        <label>Name / Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Nickname__c</fullName>
        <inlineHelpText>CAUTION This field syncs with Drupal. Please keep this in mind when editing this field.</inlineHelpText>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Organization_Category__c</fullName>
        <formula>TEXT( Account.gf_sf__Funder_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Caution - this field integrates with Drupal</inlineHelpText>
        <label>Organization Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Organization_Last_Membership_Level__c</fullName>
        <formula>Account.npo02__LastMembershipLevel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Last Membership Level (deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Organization_Member_Status__c</fullName>
        <formula>TEXT(Account.gf_sf__Membership_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Member Status (deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Picture_URL__c</fullName>
        <inlineHelpText>This field is for populating by Drupal. It is the url of the picture uploaded by the member contact.</inlineHelpText>
        <label>Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>gf_sf__Picture__c</fullName>
        <formula>IMAGE(gf_sf__Picture_URL__c, &quot;Picture&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the picture uploaded to Drupal by the member contact.</inlineHelpText>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Pinterest__c</fullName>
        <label>Pinterest</label>
        <type>Url</type>
    </fields>
</CustomObject>